v0.14.1/_sources/projections/azim/azim_orthographic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/azim/azim_orthographic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_azim_azim_orthographic.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_azim_azim_orthographic.py:


Orthographic projection
=======================

This is a perspective projection like the general perspective, but with the
difference that the point of perspective lies in infinite distance.
It is therefore often used to give the appearance of a globe viewed from outer
space, were one hemisphere can be seen as a whole. It is neither conformal nor
equal-area and the distortion increases near the edges.

**g**\ *lon0/lat0*\ [*/horizon*\ ]\ */scale*
or **G**\ *lon0/lat0*\ [*/horizon*\ ]\ */width*

**g** or **G** specifies the projection type, *lon0/lat0* specifies the
projection center, the optional parameter *horizon* specifies the maximum
distance from projection center (in degrees, <= 90, default 90), and *scale*
and *width* set the figure size.

.. GENERATED FROM PYTHON SOURCE LINES 21-32



.. image-sg:: /projections/azim/images/sphx_glr_azim_orthographic_001.png
   :alt: azim orthographic
   :srcset: /projections/azim/images/sphx_glr_azim_orthographic_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        region="g",
        projection="G10/52/12c",
        frame="afg",
        land="khaki",
        water="white",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.243 seconds)


.. _sphx_glr_download_projections_azim_azim_orthographic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: azim_orthographic.ipynb <azim_orthographic.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: azim_orthographic.py <azim_orthographic.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: azim_orthographic.zip <azim_orthographic.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
